<resources>
    <string name="app_name">GoMate</string>
    <string name="login_with_email">Login with email</string>
    <string name="welcome_to">Welcome to</string>
    <string name="gomate">GoMate</string>
    <string name="friend_for_travel">Friend for travel</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="login">Login</string>
    <string name="example_mail_com">example@mail.com</string>
    <string name="password_hint">********</string>
    <string name="email">email</string>
    <string name="sign_up">Sign up</string>
    <string name="password">password</string>
    <string name="next">Next</string>
    <string name="validate_header">Verify Identification</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="name">name</string>
    <string name="how_old">How old?</string>
    <string name="_20">20</string>
    <string name="age">age</string>
    <string name="id_card">id card</string>
    <string name="phone_number">Phone number</string>
    <string name="_66_88_888_8888">(+66) 88-888-8888</string>
    <string name="photo_graph">photo-graph</string>
    <string name="dinner">dinner</string>
    <string name="nature">nature</string>
    <string name="walk">walk</string>
    <string name="shopping">shopping</string>
    <string name="movie">movie</string>
    <string name="karaoke">karaoke</string>
    <string name="concert">concert</string>
    <string name="chats">Chats</string>
    <string name="wallet">Wallet</string>
    <string name="profile">Profile</string>
    <string name="dialog_gallery">Choose from gallery</string>
    <string name="dialog_camera">Take a photo</string>
    <string name="suggest_location">Major cineplex Rama II</string>
    <string name="suggest_description">Description</string>
    <string name="button_next"><![CDATA[>]]></string>
    <string name="major_cineplex_rama_ii">Major cineplex Rama II</string>
    <string name="_20_00">20:00</string>
    <string name="details">details</string>
    <string name="time">Time</string>
    <string name="travel_with_gomate">Travel with GoMate</string>
    <string name="verify_account">Verify account</string>
    <string name="interesting">Interesting</string>
    <string name="sign_out">Sign out</string>
    <string name="chat">chat</string>
    <string name="hello">Hello</string>
    <string name="type_a_message">Type a message</string>
    <string name="to">to</string>
    <string name="price">Price</string>
    <string name="transport">Transportation</string>
    <string name="total">Total</string>
    <string name="promotion">Promotion (15%)</string>
</resources>
