<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:layout_marginBottom="100dp"
    tools:context=".StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/welcome_to"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="126dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/gomate"
            android:textColor="@android:color/black"
            android:textSize="48sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="113dp"
            tools:layout_editor_absoluteY="181dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/friend_for_travel"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="113dp"
            tools:layout_editor_absoluteY="240dp" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="234dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:background="@drawable/round_bg_blue"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/login_with_email"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/don_t_have_account"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>