<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.rent.GomateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/round_bg_white"
            android:text="@string/back"
            android:fontFamily="@font/roboto_medium"
            android:textSize="35sp"
            style="@android:style/Animation"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/gomate"
            android:textColor="@android:color/black"
            android:textSize="48sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/text_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/major_cineplex_rama_ii"
                android:textColor="@color/colorGray"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/_20_00"
                android:textColor="@color/colorGray"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/profile1"
                android:layout_width="130sp"
                android:layout_height="130sp"
                android:layout_marginStart="40dp"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/profile">
            </ImageView>

            <ImageView
                android:id="@+id/profile2"
                android:layout_width="130sp"
                android:layout_height="130sp"
                android:layout_marginStart="40dp"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/profile">
            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/profile3"
                android:layout_width="130sp"
                android:layout_height="130sp"
                android:layout_marginStart="40dp"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/profile">
            </ImageView>

            <ImageView
                android:id="@+id/profile4"
                android:layout_width="130sp"
                android:layout_height="130sp"
                android:layout_marginStart="40dp"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/profile">
            </ImageView>
        </LinearLayout>


    </LinearLayout>


</FrameLayout>